2002-11-12  Michael Yount <csf@moscow.com>

	* bin/mj_enqueue:  Untaint alias-dependent information to
	cooperate with stricter checking under perl 5.8.0.
	Thanks to Olivier Prenant.

	* lib/Majordomo.pm:  (reject)  Bugfix:  attach the session
	file correctly in messages to administrators.

	* lib/Mj/Digest/Text.pm:  (get_text)  Convert single-part
	HTML messages into plain text in text digests.  Suggested
	by Roger Klorese.

2002-11-08  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  Make use of the password_level and
	make_list error files to replace some hard-coded English.

	* lib/mj_cf_defs.pl:  Use the special "default" keyword
	in welcome_files and farewell_files to support list-specific
	language customizations by default.

	* lib/Mj/List.pm:  Mark hard-coded English messages.

	* lib/Mj/MailOut.pm:  (welcome)  Support the use of the 
	"default" keyword in file descriptions to use the description
	from the file space.  This allows per-list language
	customizations to be supported by default.

	* lib/Mj/Token.pm:  (t_gen)  Adjust the algorithm to avoid
	character wrapping warnings.

2002-10-22  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* setup/install_util.pl (copy_file): Fix precedence error causing
	problems making hard links to be ignored.

2002-10-14  Michael Yount <csf@moscow.com>

	* lib/Mj/SimpleDB/Base.pm:  (_unstringify)  Untaint the data
	as a preliminary workaround for DB_File 1.8xx tainting problems.

2002-09-15  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Mj/Config.pm (_upgrade): Restructure; break out upgrade
	functions.

2002-08-10  Michael Yount <csf@moscow.com>

	* lib/Mj/Access.pm:  (_a_mailfile)  Bugfix:  convert Mj::Addr
	objects into strings where necessary.  Thanks to Roger Klorese.

2002-08-09  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (tokeninfo_start)  Add support for
	the token_type access variable.

	* lib/Mj/Access.pm:  (_d_tokeninfo)  By default, deny use